@startuml
skinparam classAttributeIconSize 0
hide circle 
!define ABSTRACT &#123;abstract&#125;


class WorkoutLists {
    - WORKOUTS: ArrayList<Workout>
    - RUNS: ArrayList<Run>
    - GYMS: ArrayList<Gym>
    
    + getWorkouts(): ArrayList<Workout>
    + getRuns(): ArrayList<Run>
    + getGyms(): ArrayList<Gym>
    + getLatestRun(): Run
    + getLatestGym(): Gym
    + getRunSize(): int
    + getGymSize(): int
    + deleteRun(index: int): void
    + deleteGym(index: int): void
    + clearWorkoutsRunGym(): void
    # addRun(run: Run): void
    # addGym(gym: Gym): void
    - addWorkout(workout: Workout): void
}

class Workout  {
    - date: LocalDate
    - workoutLists: WorkoutLists
    
    + getDate(): String
    + getDateForFile(): String
    - addIntoWorkoutList(workout: Workout)
}

class Run extends Workout {
    # stations: ArrayList<GymStation>

    + Run(stringTime: String, stringDistance: String)
    + Run(stringTime: String, stringDistance: String, stringDate: String)
    + getTimes(): String
    + getDistance(): String
    + getPace(): String
    + getFormatForAllHistory(): String
    + setDate(date: LocalDate): void
    # processRunTime(inputTime: String): Integer[]
    # checkDistance(stringDistance: String): Double
    # calculatePace(): String
}

class Gym extends Workout {
    # date: LocalDate
    # stations: ArrayList<GymStation>

    + Gym()
    + Gym(stringDate: String)
    + getStations(): ArrayList<GymStation>
    + getStationByIndex(index: int): GymStation
    + getHistoryFormatForSpecificGymStation(index: int): String
    + addStation(name: String, numberOfSet: String, numberOfRepetitions:String, weights: String)
    # processWeightsArray(weightString: String): ArrayList<Double>
    # validateGymStationName(exerciseName: String): String
    # validateNumberOfSets(numberOfSets: String): int
    # validateNumberOfRepetitions (numberOfRepetitions: String): int
    # validateWeight(weight: string): boolean
}


WorkoutLists *-- "*" Run : contains
WorkoutLists *-- "*" Gym : contains
WorkoutLists *-- "*" Workout : contains

@enduml